tests/ui/no-display.stderr
error[E0599]: no method named `as_display` found for reference `&Thread` in the current scope
    --> $DIR/no-display.rs:5:9
     |
5    |   #[error("thread: {thread}")]
     |           ^^^^^^^^^^^^^^^^^^ method not found in `&Thread`
     |
     = note: the method `as_display` exists but the following trait bounds were not satisfied:
             `Thread: std::fmt::Display`
             which is required by `&Thread: DisplayAsDisplay`
